# DeepKoopman_pytorch

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
configs/: discrete_search.yaml  discrete_train.yaml  fluid_attractor_search.yaml  fluid_box_search.yaml  pendulum_search.yaml  rat_analysis.yaml
configs/rat_analysis/: default.yaml
configs/search/: discrete.yaml  discrete_spectrum.yaml  fluid_attractor.yaml  fluid_box.yaml  pendulum.yaml
configs/train/: discrete.yaml  discrete_spectrum.yaml  fluid_attractor.yaml  fluid_box.yaml  manifest.yaml  pendulum.yaml  rat.yaml
deepkoopman/: __init__.py  config.py  data.py  example.py  io.py  lightning.py  losses.py  model.py  paper.py  postprocess.py  rat.py  reproduction.py  search.py  trainer.py
deepkoopman/cli/: __init__.py  postprocess.py  rat_analysis.py  rat_preprocess.py  reproduce.py  search.py  train.py
deepkoopman/visualization/: __init__.py  plots.py
doc/: rat_plan.md
postprocessing_marimo/: deepkoopman_postprocess.py
rat_data/: env.py  rat_id.csv
scripts/: __init__.py  postprocess.py  reproduce_paper.py  run_example.py  run_rat_analysis.py
tests/: test_config_search_viz.py  test_data_and_math.py  test_rat_analysis.py  test_reproduction.py
