[project]
name = "deepkoopman-pytorch"
version = "0.1.0"
description = "PyTorch implementation of DeepKoopman with search and visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.3,<2.12",
  "pytest>=8.0",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "marimo>=0.9.10",
]

[project.scripts]
deepkoopman-example = "deepkoopman.example:main"
deepkoopman-search = "scripts.search_hparams:main"
deepkoopman-postprocess = "scripts.postprocess:main"
deepkoopman-reproduce = "scripts.reproduce_paper:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepkoopman", "deepkoopman.visualization"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
