[project]
name = "deepkoopman-pytorch"
version = "0.1.0"
description = "PyTorch implementation of DeepKoopman with search and visualization"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.24",
  "torch==2.3.1; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "torch>=2.3,<2.12; platform_system != 'Linux' or platform_machine != 'x86_64'",
  "pytest>=8.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "scipy>=1.11",
  "h5py>=3.10",
  "matplotlib>=3.8",
  "marimo>=0.9.10",
  "lightning>=2.4",
  "wandb>=0.17",
]

[project.scripts]
deepkoopman-train = "deepkoopman.cli.train:main"
deepkoopman-search = "deepkoopman.cli.search:main"
deepkoopman-postprocess = "deepkoopman.cli.postprocess:main"
deepkoopman-reproduce = "deepkoopman.cli.reproduce:main"
deepkoopman-rat-analysis = "deepkoopman.cli.rat_analysis:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepkoopman", "deepkoopman.cli", "deepkoopman.visualization"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
